fixed spacing

--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -1434,6 +1434,7 @@ a.button{
 	}
 	.footer-column-description {
 		width: 30%;
+		text-align: left;
 	}
 	.footer-column-info {
 
